objects/amazonconnect__AC_CtiAdapter__c.object
<CustomObject>
    <fields>
        <fullName>amazonconnect__AudioDeviceSettings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audio Device Settings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__BottomPanel__c</fullName>
        <label>Bottom Panel</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__CallCenter__c</fullName>
        <label>Call Center Definition Name</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>amazonconnect__CcpVersion__c</fullName>
        <defaultValue>&quot;v1&quot;</defaultValue>
        <label>CCP Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>v1</fullName>
                    <default>true</default>
                    <label>v1</label>
                </value>
                <value>
                    <fullName>v2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__ConnectInstance__c</fullName>
        <externalId>true</externalId>
        <label>Connect Instance - DO NOT USE</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>amazonconnect__CustomChatRingtone__c</fullName>
        <label>Custom Chat Ringtone</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>amazonconnect__CustomRingtone__c</fullName>
        <label>Custom Ringtone</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>amazonconnect__DebugLevel__c</fullName>
        <label>Debug Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>amazonconnect__ACDebugLevel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__EnableSoftphonePopout__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Softphone Popout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Instance__c</fullName>
        <label>Amazon Connect Instance</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Medialess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medialess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__PhoneTypeSettings__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Phone Type Settings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__PresenceSyncEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Presence Sync Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Region__c</fullName>
        <label>Amazon Connect Instance Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__SoftphonePopoutEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Softphone Popout Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__SsoRelayState__c</fullName>
        <label>SSO Relay State</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__SsoUrl__c</fullName>
        <label>SSO Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>amazonconnect__UserDefined__c</fullName>
        <description>User defined configuration</description>
        <label>User Defined</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>AC CTI Adapter</label>
    <listViews>
        <fullName>amazonconnect__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CTI Adapter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC CTI Adapters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>